--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "serverless-http": "^4.0.0",
     "tailwind-merge": "latest"
   },
   "devDependencies": {
