--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "npx vite",
-    "dev:api": "tsx watch src/api/index.ts",
     "build": "npx vite build",
-    "build:api": "tsc --project tsconfig.api.json",
-    "vercel-build": "npm run build",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "preview": "npx vite preview"
+    "preview": "npx vite preview",
+    "start": "node server.js",
+    "api": "node server.js"
   },
   "dependencies": {
     "@types/mongoose": "^5.11.96",
@@ -27,7 +26,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "serverless-http": "^4.0.0",
     "tailwind-merge": "latest"
   },
   "devDependencies": {
@@ -42,7 +40,6 @@
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
-    "@vercel/node": "^5.5.21",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "latest",
     "eslint": "^8.50.0",
